Allow cluster_vars[buildenv].aws_access_key and cluster_vars[buildenv].aws_secret_key to be empty and to instead use standard environment variables (AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY or AWS_PROFILE (with ~/.aws/credentials or ~/.aws/config file))

--- a/EXAMPLE/cluster_defs/aws/eu-west-1/dev/cluster_vars__buildenv.yml
+++ b/EXAMPLE/cluster_defs/aws/eu-west-1/dev/cluster_vars__buildenv.yml
@@ -2,6 +2,7 @@
 
 cluster_vars:
   dev:
+    # Several options for credentials: Provide AWS key/secrets here; use an IAM role to switch to; use the environment variables AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY; use the AWS_PROFILE environment variable (with ~/.aws/credentials or ~/.aws/config file)
     aws_access_key: "AKIAXXXXXXXXXXXXXXXX"
     aws_secret_key: !vault |
       $ANSIBLE_VAULT;1.2;AES256;dev
