--- a/redeploy/__common/tasks/powerchange_vms_aws.yml
+++ b/redeploy/__common/tasks/powerchange_vms_aws.yml
@@ -5,8 +5,8 @@
 
 - name: "powerchange_vms/aws | {{powerchange_new_state}} VMs"
   amazon.aws.ec2_instance:
-    access_key: "{{cluster_vars[buildenv].aws_access_key}}"
-    secret_key: "{{cluster_vars[buildenv].aws_secret_key}}"
+    access_key: "{{cluster_vars[buildenv].aws_access_key | default(omit)}}"
+    secret_key: "{{cluster_vars[buildenv].aws_secret_key | default(omit)}}"
     session_token: "{{cluster_vars[buildenv].aws_session_token | default(omit)}}"
     region: "{{ cluster_vars.region }}"
     state: "{% if powerchange_new_state == 'stop' %}stopped{% else %}running{% endif %}"
